--- a/tenant-guard/views/chat.ejs
+++ b/tenant-guard/views/chat.ejs
@@ -9,13 +9,14 @@
         <p class="chat-bubble__message"><%= defaultBotMsg %></p>
         <p class="chat-bubble__timestamp"></p>
       </div>
-      <div class="chat-bubble__container chat-bubble__container--user">
+      <!-- <div class="chat-bubble__container chat-bubble__container--user">
         <p class="chat-bubble__message">Hello</p>
         <p class="chat-bubble__timestamp"></p>
-      </div>
+      </div> -->
       <form class="chat-entry__form">
         <input type="text" placeholder="Type a message..." class="chat-entry__input">
         <button class="chat-entry__button" type=submit>Send</button>
+        <a class="main-img__button" href="/chat">Chat</a>
       </form>
     </section>
     </div>
